Adjustments for blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 # Site settings
 title: Raphael Fabeni
+name: Raphael Fabeni
 email: contato@raphaelfabeni.com.br
 description: "A brazilian front-end developer who loves the web, electronic music and travels."
 baseurl: "/"
 url: "http://raphaelfabeni.com.br"
 exclude: ['node_modules', 'Gruntfile.js', 'package.json']
-
-twitter_username: raphaelfabeni
-github_username:  raphaelfabeni
 
 # Build settings
 markdown: kramdown
