Edit post and config

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ name: Raphael Fabeni
 email: contato@raphaelfabeni.com.br
 description: "A brazilian front-end developer who loves the web, electronic music and travels."
 baseurl: "/"
-url: "http://raphaelfabeni.github.io"
+url: "http://raphaelfabeni.com.br"
 exclude: ['node_modules', 'Gruntfile.js', 'package.json']
 
 # Build settings
