Adjustments on homepage and edit some images in post about Dev in Company

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude: ['node_modules', 'Gruntfile.js', 'package.json']
 # Build settings
 markdown: kramdown
 permalink: pretty
-highlighter: rouge
+highlighter: pygments
 
 source:      .
 destination: ./_site
