--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "nomedoprojeto",
+  "name": "raphaelfabeni.github.io",
   "version": "1.0.0",
-  "title": "Título do projeto",
-  "homepage": "URL do projeto",
+  "title": "Raphael Fabeni - Blog",
+  "homepage": "http://www.raphaelfabeni.com.br",
+  "author": "Raphael Fabeni",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raphaelfabeni/raphaelfabeni.github.io.git"
+  },
   "devDependencies": {
     "bower": "~1.3.8",
     "grunt": "~0.4.5",
@@ -12,6 +21,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-svg2png": "~0.2.5",
     "grunt-svgmin": "~0.4.0",
-    "jshint-stylish": "~0.4.0"
+    "jshint-stylish": "~0.4.0",
+    "grunt-shell": "^1.1.1",
+    "grunt-concurrent": "^1.0.0"
   }
 }
