--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ node_js:
   - "0.10"
 install:
   - travis_retry gem install --no-document jekyll
+  - travis_retry bower install -g grunt-cli
   - travis_retry npm install -g grunt-cli
 before_script:
   - npm install
+  - bower install
 script:
   - grunt build
