--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "devDependencies": {
     "bower": "~1.3.8",
     "grunt": "~0.4.5",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-shell": "^1.1.1",
     "grunt-svg2png": "~0.2.5",
     "grunt-svgmin": "~0.4.0",
-    "jshint-stylish": "~0.4.0",
-    "grunt-shell": "^1.1.1",
-    "grunt-concurrent": "^1.0.0"
+    "jshint-stylish": "~0.4.0"
   }
 }
