--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-coveralls": "^1.0.0",
     "grunt-shell": "^1.1.1",
     "grunt-svg2png": "~0.2.5",
     "grunt-svgmin": "~0.4.0",
-    "jshint-stylish": "~0.4.0",
-    "grunt-coveralls": "^1.0.0",
-    "grunt-template-jasmine-istanbul": "^0.3.3"
+    "grunt-template-jasmine-istanbul": "^0.3.3",
+    "jshint-stylish": "~0.4.0"
   }
 }
