--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: node_js
 node_js:
   - "0.10"
 install:
-  - travis_retry gem install --no-document jekyll
-  - travis_retry npm install -g bower
-  - travis_retry npm install -g grunt-cli
+  - gem install  jekyll --no-rdoc
+  - npm install -g bower
+  - npm install -g grunt-cli
 before_script:
   - npm install
   - bower install
