Adjustments in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,21 @@ sudo: false
 branches:
   only:
   - develop
-language: node_js
-node_js:
-- '0.10'
+language: ruby
 install:
-- travis_retry gem install  jekyll
-- travis_retry npm install -g bower
-- travis_retry npm install -g grunt-cli
+- travis_retry gem install jekyll -v '2.4.0'
+- travis_retry gem install kramdown -v 1.7.0
 - travis_retry gem install jekyll-sitemap
 - travis_retry gem install html-proofer
+- travis_retry npm install -g bower
+- travis_retry npm install -g grunt-cli
 before_script:
 - npm install
 - bower install
 script:
 - grunt tests
 - grunt build
+after_success:
 - htmlproof ./_site --only-4xx
 - bash ./script.bash
 notifications:
