--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ branches:
   - develop
 language: ruby
 install:
-- travis_retry gem install jekyll -v '2.4.0'
+- travis_retry gem install jekyll
 - travis_retry gem install kramdown -v 1.7.0
 - travis_retry gem install jekyll-sitemap
 - travis_retry gem install html-proofer
