[FIX] Changed back jekyll version

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: ruby
 rvm:
 - 2.2.0
 install:
-- travis_retry gem install jekyll
+- travis_retry gem install jekyll -v '2.4.0'
 - travis_retry gem install kramdown -v 1.7.0
 - travis_retry gem install jekyll-sitemap
 - travis_retry gem install html-proofer
