--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plugins:     ./_plugins
 paginate: 5
 paginate_path: 'blog/page:num'
 
-permalink:   /:title/
+permalink:   /:categories/:title/
 
 gems:
   - jekyll-sitemap
