--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bower": "~1.3.8",
     "grunt": "~0.4.5",
     "grunt-concurrent": "^1.0.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-sass": "~0.7.3",
