--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,19 @@ language: ruby
 rvm:
 - 2.2.0
 install:
+- travis_retry gem install jekyll -v '2.4.0'
+- travis_retry gem install kramdown -v 1.7.0
+- travis_retry gem install jekyll-sitemap
+- travis_retry gem install html-proofer
+- travis_retry npm install -g bower
+- travis_retry npm install -g grunt-cli
+before_script:
+- npm install
+- bower install
+script:
+- grunt ci
+- grunt build
+after_success:
 - bash ./script.bash
 notifications:
   email: rapha.fabeni@gmail.com
