--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "url": "https://github.com/raphaelfabeni/raphaelfabeni.github.io.git"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
     "bower": "~1.3.8",
     "grunt": "~0.4.5",
+    "grunt-babel": "^6.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-imagemin": "^1.0.0",
