--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 - travis_retry gem install jekyll -v '2.4.0'
 - travis_retry gem install kramdown -v 1.7.0
 - travis_retry gem install jekyll-sitemap
-- travis_retry gem install html-proofer
+- travis_retry npm install -g grunt
 - travis_retry npm install -g bower
 - travis_retry npm install -g grunt-cli
 before_script:
