[FIX] Fix coveralls test

--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,2 @@
-service_name: travis-ci
-repo_token: QDSjjtyVtpm5E1J0RHBBMkXdmNJsBg43w
+service_name: travis
+repo_token: iRnULN4y3kge8HqCP3jb2nYLJd7M5hMcG
