--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ exclude: ['node_modules', 'Gruntfile.js', 'package.json', 'assets', 'bower_compo
 # Build settings
 markdown: kramdown
 permalink: pretty
-highlighter: rouge
+syntax_highlighter: rouge
+#highlighter: rouge
 #pygments: true
 # highlighter: pygments
 
