--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ sudo: false
 branches:
   only:
   - develop
-language: ruby
-rvm:
-- 2.2.0
+language: node_js
+node_js: 
+  - "4.2"
 before_install:
 - bash ./start.bash
 install:
