--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ syntax_highlighter: rouge
 
 source:      .
 destination: ./_site
-plugins_dir: ./_plugins
+#plugins_dir: ./_plugins
 #paginate: 5
 #paginate_path: 'blog/page:num'
 
