--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "grunt-babel": "^6.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-contrib-jasmine": "^1.1.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-coveralls": "^1.0.0",
+    "grunt-lib-phantomjs": "^1.1.0",
     "grunt-shell": "^1.1.1",
     "grunt-template-jasmine-istanbul": "^0.3.3",
     "jshint-stylish": "~0.4.0"
