--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: Raphael Fabeni
 name: Raphael Fabeni
-email: contato@raphaelfabeni.com.br
+email: rapha.fabeni@gmail.com
 description: "A brazilian front-end developer who loves the web, electronic music and travels."
 baseurl: "/"
 url: "http://www.raphaelfabeni.com.br"
 url_en: "http://www.raphaelfabeni.com.br/en"
-exclude: ['node_modules', 'Gruntfile.js', 'package.json', 'assets', 'bower_components', 'spec', 'bower.json', 'bin', 'README.md', 'script.bash', 'Gemfile.lock', 'Gemfile']
+exclude: ['node_modules', 'package.json', 'bin', 'README.md', 'script.bash', 'Gemfile.lock', 'Gemfile']
 
 # Build settings
 markdown: kramdown
