--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "copy:dist": "cp -R src/ dist/",
     "copy": "npm run copy:dist",
     "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output dist/styles/main.min.css dist/styles/main.min.css",
-    "sass:dist": "node-sass --output-style compressed src/styles/main.scss dist/styles/main.min.css",
-    "sass:_site": "node-sass --output-style compressed src/styles/main.scss _site/dist/styles/main.min.css",
+    "sass:dist": "node-sass --output-style compressed src/styles/main.sass dist/styles/main.min.css",
+    "sass:_site": "node-sass --output-style compressed src/styles/main.sass _site/dist/styles/main.min.css",
     "sass": "npm run sass:dist",
     "critical": "critical _site/index.html --base _site --minify --css _site/dist/styles/main.min.css > _includes/css/critical.css",
     "font": "cp -R src/fonts dist/fonts",
