--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
   },
   "dependencies": {
     "a11y": "^0.4.0",
-    "critical": "^0.7.0",
-    "parallelshell": "^2.0.0",
-    "psi": "^2.0.2",
     "chokidar": "1.4.2",
-    "chokidar-cli": "1.2.0"
+    "chokidar-cli": "1.2.0",
+    "critical": "^0.7.0",
+    "global": "^4.3.2",
+    "grunt": "^1.0.1",
+    "parallelshell": "^2.0.0",
+    "psi": "^2.0.2"
   }
 }
