--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
     "test": "npm run build",
     "clean:dist": "rm -rf dist && rm -rf _site",
     "clean": "npm run clean:dist",
-    "copy:dist": "cp -R src/ dist/",
-    "copy": "npm run copy:dist",
     "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output dist/styles/main.min.css dist/styles/main.min.css",
     "sass:dist": "node-sass --output-style compressed src/styles/main.sass dist/styles/main.min.css",
     "sass:_site": "node-sass --output-style compressed src/styles/main.sass _site/dist/styles/main.min.css",
     "sass": "npm run sass:dist",
     "critical": "critical _site/index.html --base _site --minify --css _site/dist/styles/main.min.css > _includes/css/critical.css",
     "font": "cp -R src/fonts dist/fonts",
-    "imagemin": "imagemin src/images/* dist/images/ -p",
+    "imagemin": "imagemin src/images/* -o=dist/images/",
     "pagespeed": "psi tony-jones.github.io/jekyll-starter-kit/ --strategy=mobile",
     "accessibility": "a11y tony-jones.github.io/jekyll-starter-kit/",
     "build:jekyll": "jekyll build --config _config.yml",
@@ -38,8 +36,8 @@
     "build:css": "npm run sass && npm run prefix",
     "build:font": "npm run font",
     "build:images": "npm run imagemin",
-    "build": "npm run clean && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical",
-    "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' -c 'npm run build:jekyll && browser-sync reload'",
+    "build": "npm run clean && npm run imagemin && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical",
+    "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
     "watch:css": "chokidar 'src/styles/**/*' -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
     "watch:js": "chokidar 'src/scripts/*' -c 'npm run uglify:_site && browser-sync reload'",
     "serve": "browser-sync start --http --server _site",
@@ -51,6 +49,8 @@
     "eslint": "^1.10.3",
     "eslint-config-google": "^0.3.0",
     "image-min": "^0.3.2",
+    "imagemin": "^5.3.1",
+    "imagemin-cli": "^3.0.0",
     "node-sass": "^3.13.1",
     "parallelshell": "^3.0.0",
     "postcss": "^5.0.14",
