--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,7 @@ root = false
 
 # All files
 [*]
-indent_style = space
+indent_style = tab
 indent_size = 2
 charset = utf-8
 end_of_line = lf
@@ -12,17 +12,17 @@ trim_trailing_whitespace = true
 
 # HTML
 [*.html]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 # CSS
 [*.css]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 # JS
 [*.js]
-indent_style = space
+indent_style = tab
 indent_size = 2
 
 # md
