--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "postcss": "^5.0.14",
     "postcss-cli": "^2.5.0",
     "sass-lint": "^1.11.1",
-    "uglify": "^0.1.5",
+    "uglify-js": "^3.1.2",
     "watch": "^0.17.1"
   },
   "dependencies": {
