--- a/package.json
+++ b/package.json
@@ -12,34 +12,44 @@
     "type": "git",
     "url": "https://github.com/raphaelfabeni/raphaelfabeni.github.io.git"
   },
+  "config": {
+  	"styles": {
+  		"all": "src/styles/**/*",
+	  	"src": "src/styles/main.sass",
+	  	"dist": "dist/styles/main.min.css",
+	  	"critical": "_includes/css/critical.css"
+	  },
+	  "images": {
+	  	"src": "src/images/*",
+	  	"dist": "dist/images/"
+	  }
+  },
   "scripts": {
     "eslint:dist": "eslint src/scripts/*.js",
     "eslint": "npm run eslint:dist",
     "lint:css": "sass-lint -v -q",
     "uglify:dist": "uglify -s src/scripts/*.js -o dist/scripts/main.min.js",
     "uglify:_site": "uglify -s src/scripts/*.js -o _site/dist/scripts/main.min.js",
-    "uglify": "npm run uglify:dist",
-    "test": "npm run build",
-    "clean:dist": "rm -rf dist && rm -rf _site",
-    "clean": "npm run clean:dist",
-    "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output dist/styles/main.min.css dist/styles/main.min.css",
-    "sass:dist": "node-sass --output-style compressed src/styles/main.sass dist/styles/main.min.css",
-    "sass:_site": "node-sass --output-style compressed src/styles/main.sass _site/dist/styles/main.min.css",
+    "uglify:home": "uglifyjs src/scripts/colors.js -o dist/scripts/home.min.js",
+    "uglify": "npm run uglify:home",
+    "clean": "rm -rf dist && rm -rf _site",
+    "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output ${npm_package_config_styles_dist} ${npm_package_config_styles_dist}",
+    "sass:dist": "node-sass --output-style compressed ${npm_package_config_styles_src} ${npm_package_config_styles_dist}",
+    "sass:_site": "node-sass --output-style compressed ${npm_package_config_styles_src} _site/${npm_package_config_styles_dist}",
     "sass": "npm run sass:dist",
-    "critical": "critical _site/index.html --base _site --minify --css _site/dist/styles/main.min.css > _includes/css/critical.css",
-    "font": "cp -R src/fonts dist/fonts",
-    "imagemin": "imagemin src/images/* -o=dist/images/",
+    "critical": "critical _site/index.html --base _site --minify --css _site/${npm_package_config_styles_dist} > ${npm_package_config_styles_critical}",
+    "imagemin": "imagemin ${npm_package_config_images_src} -o=${npm_package_config_images_dist}",
     "pagespeed": "psi tony-jones.github.io/jekyll-starter-kit/ --strategy=mobile",
     "accessibility": "a11y tony-jones.github.io/jekyll-starter-kit/",
     "build:jekyll": "jekyll build --config _config.yml",
     "build:js": "npm run eslint && npm run uglify",
     "build:css": "npm run sass && npm run prefix",
-    "build:font": "npm run font",
     "build:images": "npm run imagemin",
-    "build": "npm run clean && npm run imagemin && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical",
+    "prepare": "mkdir -p dist dist/images dist/scripts dist/styles",
+    "build": "npm run clean && npm run prepare && npm run imagemin && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical",
     "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
-    "watch:css": "chokidar 'src/styles/**/*' -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
-    "watch:js": "chokidar 'src/scripts/*' -c 'npm run uglify:_site && browser-sync reload'",
+    "watch:css": "chokidar ${npm_package_config_styles_all} -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
+    "watch:js": "chokidar 'src/scripts/*' -c 'npm run uglify:home && cp dist/scripts/home.min.js _site/dist/scripts/home.min.js && browser-sync reload'",
     "serve": "browser-sync start --http --server _site",
     "start": "npm run build -s && parallelshell \"npm run serve -s\" \"npm run watch:jekyll -s\" \"npm run watch:css -s\" \"npm run watch:js -s\""
   },
