Fix the script js

--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "eslint:dist": "eslint src/scripts/*.js",
     "eslint": "npm run eslint:dist",
     "lint:css": "sass-lint -v -q",
-    "uglify:dist": "uglify -s src/scripts/*.js -o dist/scripts/main.min.js",
-    "uglify:_site": "uglify -s src/scripts/*.js -o _site/dist/scripts/main.min.js",
     "uglify:home": "uglifyjs src/scripts/colors.js -o dist/scripts/home.min.js",
+    "update:js": "cp -R dist/scripts _site/dist",
     "uglify": "npm run uglify:home",
     "clean": "rm -rf dist && rm -rf _site",
     "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output ${npm_package_config_styles_dist} ${npm_package_config_styles_dist}",
@@ -49,7 +48,7 @@
     "build": "npm run clean && npm run prepare && npm run imagemin && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical",
     "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
     "watch:css": "chokidar ${npm_package_config_styles_all} -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
-    "watch:js": "chokidar 'src/scripts/*' -c 'npm run uglify:home && cp dist/scripts/home.min.js _site/dist/scripts/home.min.js && browser-sync reload'",
+    "watch:js": "chokidar 'src/scripts/*' -c 'npm run uglify:home && npm run update:js && browser-sync reload'",
     "serve": "browser-sync start --http --server _site",
     "start": "npm run build -s && parallelshell \"npm run serve -s\" \"npm run watch:jekyll -s\" \"npm run watch:css -s\" \"npm run watch:js -s\""
   },
