general adjustments for perfomance

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "eslint:dist": "eslint src/scripts/*.js",
     "eslint": "npm run eslint:dist",
     "lint:css": "sass-lint -v -q",
+    "libs": "cp -R src/scripts/libs dist/scripts/libs",
     "babel": "babel src/scripts --out-dir dist/scripts/temp",
-    "uglify:home": "uglifyjs dist/scripts/temp/colors.js dist/scripts/temp/navigation.js dist/scripts/temp/arrow.js -o dist/scripts/home.min.js",
+    "uglify:home": "uglifyjs dist/scripts/temp/colors.js dist/scripts/temp/fonts.js dist/scripts/temp/navigation.js dist/scripts/temp/arrow.js -o dist/scripts/home.min.js",
     "update:js": "cp -R dist/scripts _site/dist",
     "uglify": "npm run uglify:home",
     "clean": "rm -rf dist && rm -rf _site",
@@ -42,7 +43,7 @@
     "pagespeed": "psi tony-jones.github.io/jekyll-starter-kit/ --strategy=mobile",
     "accessibility": "a11y tony-jones.github.io/jekyll-starter-kit/",
     "build:jekyll": "jekyll build --config _config.yml",
-    "build:js": "npm run eslint && npm run babel && npm run uglify",
+    "build:js": "npm run eslint && npm run babel && npm run uglify && npm run libs",
     "build:css": "npm run sass && npm run prefix",
     "build:images": "npm run imagemin",
     "prepare": "mkdir -p dist dist/images dist/scripts dist/styles && mkdir -p _site _site/dist/images _site/dist/scripts _site/dist/scripts/temp _site/dist/styles",
