--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "build:jekyll": "jekyll build --config _config.yml",
     "build:js": "npm run eslint && npm run babel && npm run uglify && npm run libs",
     "build:css": "npm run sass && npm run prefix",
-    "build:images": "npm run imagemin",
+    "build:images": "npm run imagemin && cp -r src/images/favicon dist/images/favicon",
     "prepare": "mkdir -p dist dist/images dist/scripts dist/styles && mkdir -p _site _site/dist/images _site/dist/scripts _site/dist/scripts/temp _site/dist/styles",
     "build": "npm run clean && npm run prepare && npm run imagemin && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical && npm run after",
     "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' 'blog/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
