--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -2,6 +2,9 @@ options:
   formatter: stylish
 files:
   include: 'src/styles/**/*.s+(a|c)ss'
+  ignore:
+    - 'src/styles/layout/syntax/_dark.sass'
+    - 'src/styles/layout/syntax/_light.sass'
 rules:
   # Extends
   extends-before-declarations: 0
