--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "lint:css": "sass-lint -v -q",
     "libs": "cp -R src/scripts/libs dist/scripts/libs",
     "babel": "babel src/scripts --out-dir dist/scripts/temp",
-    "uglify:home": "uglifyjs dist/scripts/temp/fonts.js dist/scripts/temp/navigation.js dist/scripts/temp/arrow.js dist/scripts/temp/language.js -o dist/scripts/home.min.js",
+    "uglify:home": "uglifyjs dist/scripts/temp/libs/fontface-observer.js dist/scripts/temp/fonts.js dist/scripts/temp/navigation.js dist/scripts/temp/language.js -o dist/scripts/home.min.js",
+    "uglify:post": "uglifyjs dist/scripts/temp/libs/prism.js dist/scripts/temp/arrow.js -o dist/scripts/post.min.js",
     "update:js": "cp -R dist/scripts _site/dist",
-    "uglify": "npm run uglify:home",
+    "uglify": "npm run uglify:home && npm run uglify:post",
     "clean": "rm -rf dist && rm -rf _site",
     "prefix": "postcss --use autoprefixer -b 'last 3 versions' --output ${npm_package_config_styles_dist} ${npm_package_config_styles_dist}",
     "sass:dist": "node-sass --output-style compressed ${npm_package_config_styles_src} ${npm_package_config_styles_dist}",
@@ -48,9 +49,9 @@
     "build:images": "npm run imagemin && cp -r src/images/favicon dist/images/favicon",
     "prepare": "mkdir -p dist dist/images dist/scripts dist/styles && mkdir -p _site _site/dist/images _site/dist/scripts _site/dist/scripts/temp _site/dist/styles",
     "build": "npm run clean && npm run prepare && npm run build:images && npm run build:js && npm run build:css && npm run build:jekyll && npm run critical && npm run after",
-    "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' '_category/*' 'blog/*' 'my-closet/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
+    "watch:jekyll": "chokidar 'index.html' '_includes/*.html' '_layouts/*.html' '_posts/*' '_category/*' 'blog/*' 'thoughts/*' 'my-closet/*' -c 'npm run build:jekyll && npm run sass:_site && browser-sync reload'",
     "watch:css": "chokidar ${npm_package_config_styles_all} -c 'npm run lint:css && npm run sass:_site && browser-sync reload'",
-    "watch:js": "chokidar 'src/scripts/*' -c 'npm run eslint && npm run babel && npm run uglify:home && npm run update:js && browser-sync reload'",
+    "watch:js": "chokidar 'src/scripts/*' -c 'npm run eslint && npm run babel && npm run uglify:home && npm run uglify:post && npm run update:js && browser-sync reload'",
     "serve": "browser-sync start --http --server _site",
     "start": "npm run build -s && parallelshell \"npm run serve -s\" \"npm run watch:jekyll -s\" \"npm run watch:css -s\" \"npm run watch:js -s\"",
     "after": "rm -rf _site/scripts/temp"
