--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "lint:css": "sass-lint -v -q",
     "libs": "cp -R src/scripts/libs dist/scripts/libs",
     "babel": "babel src/scripts --out-dir dist/scripts/temp",
-    "uglify:home": "uglifyjs dist/scripts/temp/libs/fontface-observer.js dist/scripts/temp/fonts.js dist/scripts/temp/navigation.js dist/scripts/temp/language.js -o dist/scripts/home.min.js",
-    "uglify:post": "uglifyjs dist/scripts/temp/libs/prism.js dist/scripts/temp/arrow.js -o dist/scripts/post.min.js",
+    "uglify:home": "uglifyjs dist/scripts/temp/libs/fontface-observer.js dist/scripts/temp/fonts.js dist/scripts/temp/navigation.js -o dist/scripts/home.min.js",
+    "uglify:post": "uglifyjs dist/scripts/temp/arrow.js -o dist/scripts/post.min.js",
     "update:js": "cp -R dist/scripts _site/dist",
     "uglify": "npm run uglify:home && npm run uglify:post",
     "clean": "rm -rf dist && rm -rf _site",
