Fix jekyll gist fallback

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ permalink:   /:title/
 gems:
   - jekyll-gist
 gist:
-  fallback: false
+  noscript: false
 collections:
   category:
     output: true
