--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,15 @@ gist:
 collections:
   category:
     output: true
+compress_html:
+  clippings: []
+  comments: []
+  endings: []
+  ignore:
+    envs: []
+  blanklines: false
+  profile: false
+  startings: []
 
 
 # thankful_eyes
